[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Tilesets/terrain.tres" type="TileSet" id=2]
[ext_resource path="res://Scenes/UI/ControlsScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/UI/controls/DragBlock.gd" type="Script" id=4]
[ext_resource path="res://Scenes/UI/PauseMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Sprites/ui/controls/left.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="TestWorld" type="Node"]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 56, 72 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 393212, 1, 0, 393213, 1, 1, 393214, 1, 1, 393215, 1, 1, 327680, 1, 1, 327681, 3, 1, 327682, 3, 1, 327683, 3, 1, 327684, 3, 1, 327685, 1, 1, 327686, 1, 1, 327687, 3, 1, 327688, 3, 1, 327689, 3, 1, 327690, 3, 1, 327691, 3, 1, 327692, 0, 1, 327693, 0, 1, 327694, 2, 196608, 327695, 2, 196609, 327696, 2, 196610, 327697, 3, 1, 327698, 3, 1, 327699, 3, 1, 327700, 1, 2, 458748, 1, 65536, 458749, 1, 131076, 458750, 1, 196612, 458751, 1, 4, 393216, 1, 196612, 393217, 1, 4, 393218, 1, 131076, 393219, 8, 0, 393220, 1, 65540, 393221, 1, 65540, 393222, 1, 196612, 393223, 1, 131076, 393224, 3, 4, 393225, 3, 131076, 393226, 3, 65537, 393227, 8, 0, 393228, 8, 0, 393229, 0, 65537, 393230, 0, 4, 393231, 1, 196612, 393232, 1, 65540, 393233, 1, 131076, 393234, 8, 0, 393235, 1, 65537, 393236, 1, 65538, 524284, 1, 65536, 524285, 1, 65537, 524286, 1, 65537, 524287, 1, 65537, 458752, 1, 196612, 458753, 1, 131076, 458754, 8, 0, 458755, 8, 0, 458756, 8, 0, 458757, 8, 0, 458758, 1, 65540, 458759, 1, 4, 458760, 8, 0, 458761, 8, 0, 458762, 8, 0, 458763, 1, 196612, 458764, 0, 65537, 458765, 0, 65540, 458766, 1, 196612, 458767, 8, 0, 458768, 1, 196612, 458769, 8, 0, 458770, 8, 0, 458771, 8, 0, 458772, 1, 65538, 589820, 1, 65536, 589821, 1, 131076, 589822, 1, 65540, 589823, 1, 196612, 524288, 8, 0, 524289, 1, 65540, 524290, 8, 0, 524291, 8, 0, 524292, 8, 0, 524293, 8, 0, 524294, 8, 0, 524295, 8, 0, 524296, 8, 0, 524297, 8, 0, 524298, 8, 0, 524299, 1, 65537, 524300, 1, 131076, 524301, 0, 4, 524302, 1, 65537, 524303, 8, 0, 524304, 8, 0, 524305, 8, 0, 524306, 8, 0, 524307, 8, 0, 524308, 1, 65538, 655356, 1, 65536, 655357, 1, 131076, 655358, 1, 196612, 655359, 1, 131076, 589824, 8, 0, 589825, 8, 0, 589826, 8, 0, 589827, 8, 0, 589828, 8, 0, 589829, 8, 0, 589830, 8, 0, 589831, 8, 0, 589832, 8, 0, 589833, 8, 0, 589834, 8, 0, 589835, 8, 0, 589836, 8, 0, 589837, 8, 0, 589838, 8, 0, 589839, 8, 0, 589840, 8, 0, 589841, 8, 0, 589842, 8, 0, 589843, 8, 0, 589844, 1, 65538, 720892, 1, 65536, 720893, 1, 65537, 720894, 1, 65540, 720895, 1, 65537, 655360, 1, 4, 655361, 1, 65540, 655362, 1, 65540, 655363, 1, 65537, 655364, 1, 131076, 655365, 1, 65537, 655366, 1, 196612, 655367, 1, 131076, 655368, 1, 65540, 655369, 1, 65540, 655370, 1, 65537, 655371, 1, 131076, 655372, 1, 65540, 655373, 1, 131076, 655374, 1, 65540, 655375, 1, 196612, 655376, 1, 4, 655377, 1, 65537, 655378, 1, 65537, 655379, 1, 65537, 655380, 1, 65538, 786428, 1, 65536, 786429, 1, 131076, 786430, 1, 196612, 786431, 1, 196612, 720896, 1, 131076, 720897, 1, 4, 720898, 1, 65540, 720899, 1, 65537, 720900, 1, 131076, 720901, 1, 131076, 720902, 1, 131076, 720903, 1, 65540, 720904, 1, 4, 720905, 1, 65537, 720906, 1, 4, 720907, 1, 4, 720908, 1, 65540, 720909, 1, 65537, 720910, 1, 65540, 720911, 1, 131076, 720912, 1, 65540, 720913, 1, 65537, 720914, 1, 65537, 720915, 1, 65537, 720916, 1, 65538, 851964, 1, 131072, 851965, 1, 131073, 851966, 1, 131073, 851967, 1, 131073, 786432, 1, 131073, 786433, 1, 131073, 786434, 1, 131073, 786435, 1, 131073, 786436, 1, 131073, 786437, 1, 131073, 786438, 1, 131073, 786439, 1, 131073, 786440, 1, 131073, 786441, 1, 131073, 786442, 1, 131073, 786443, 1, 131073, 786444, 1, 131073, 786445, 1, 131073, 786446, 1, 131073, 786447, 1, 131073, 786448, 1, 131073, 786449, 1, 131073, 786450, 1, 131073, 786451, 1, 131073, 786452, 1, 131074 )

[node name="ControlsUI" parent="." instance=ExtResource( 3 )]
player_path = NodePath("../Player")

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="UILayer" instance=ExtResource( 5 )]

[node name="DragBlock" type="KinematicBody2D" parent="."]
input_pickable = true
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DragBlock"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="DragBlock"]
texture = ExtResource( 6 )
hframes = 2
vframes = 4

[connection signal="input_event" from="DragBlock" to="DragBlock" method="_on_DragBlock_input_event"]
[connection signal="mouse_entered" from="DragBlock" to="DragBlock" method="_on_DragBlock_mouse_entered"]
[connection signal="mouse_exited" from="DragBlock" to="DragBlock" method="_on_DragBlock_mouse_exited"]
